# richslow

./: .changelog-template.md  .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  DASHBOARD_IMPLEMENTATION.md  FEATURES.md  README.md  RELEASE_NOTES_v1.1.0.md  USER_GUIDE.md  main.py  pyproject.toml  render.yaml
.claude/: parallel_agents.md
.claude/commands/: extract-design-system.md  iterate-design.md
.serena/: project.yml
app/: main.py
app/config/: __init__.py  field_mappings.py
app/routes/: route_company.py  route_funds.py  route_historical_prices.py  route_industry_benchmark.py  route_quarterly_ratios.py  route_statements.py  route_valuation.py
app/schemas/: historical_prices.py  schema_common.py  schema_company.py  schema_funds.py  (+3 more)
docs/: company.md  flatten_multi_index.md  load.md  statements_structures.md  vnstock_dtypes.md
frontend/: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_STATUS.md  README.md  jest.config.js  jest.setup.js  package-lock.json  package.json  test-facade-client.js
scripts/: generate-docs.sh
static/: dashboard.html  index.html  market.html  statements.html  valuation.html
tests/: __init__.py  conftest.py  test_backend_reusability.py  test_backend_reusability_valuation.py  test_company_integration.py  test_contract_alignment.py  test_contract_alignment_valuation.py  test_imports.py  test_integration.py  test_integration_valuation.py  test_route_company.py  test_route_funds.py  test_route_historical_prices.py  test_schema_funds.py  test_schemas.py  test_service_company.py  test_service_funds.py  test_service_valuation.py
(+97 files in other folders)
